# icub-tensorflow

./: BasicConvLSTMCell.py  README.md  model.py  rnn_cell_ext.py  run_programs.sh  test_rnn.py  train_rnn.py
onlineTestingProgram/: CMakeLists.txt  CMakeLists.txt~  cnn.cpp  cnn.h  controller.cpp  controller.h  fingerGrasper.cpp  fingerGrasper.h  main.cpp  main.py  screenWriter.cpp  screenWriter.h  utils.cpp  utils.h  vision.cpp  worldManipulator.cpp  worldManipulator.h
onlineTestingProgram/homePositions/: home_head.txt  home_lArm.txt  task_head.txt  task_lArm.txt  task_torso.txt
onlineTestingProgram/result/: 0_result_objPosition_stat.txt  checkResult_objPosition.m  trialList.txt  trialList.txt_te_ex_fewer_randLoc  trialList.txt~  tsne.m  tsne_p.m
onlineTestingProgram/softmaxConfig/: invX_dim1.txt  invX_dim10.txt  invX_dim4.txt  invX_dim7.txt  invX_dim9.txt  target_home_softmax.txt  target_home_softmax.txt~  x_dim2.txt  x_dim3.txt  x_dim5.txt  x_dim6.txt  x_dim8.txt
onlineTestingProgram/trialConf/: trialList.txt~  trialList_original.txt  trialList_trained.txt
onlineTestingProgram/trialConf/randomTrials/: randomTrial_4110.txt  randomTrial_4111.txt  randomTrial_4112.txt  randomTrial_4113.txt  randomTrial_4114.txt  randomTrial_4115.txt  randomTrial_4116.txt  randomTrial_4117.txt  randomTrial_4118.txt  randomTrial_4119.txt  randomTrial_4120.txt  randomTrial_4121.txt  randomTrial_4122.txt  randomTrial_4123.txt  randomTrial_4124.txt  randomTrial_4125.txt  randomTrial_4126.txt  randomTrial_4127.txt  randomTrial_4128.txt  randomTrial_4129.txt  randomTrial_4130.txt  (+580 more)
(+124 files in other folders)
